# RTXDDP_Pipe

./: CMakeLists.txt  README.md
include/CAN/: CiA402_Object_Dictionary.h  MotorCiA402.cpp  MotorCiA402.h
include/EcatSystem/: PDOConfig.c
include/Robot/: CMakeLists.txt  PropertyDefinition.h  ServoAxis_Motor.h
src/: QTmain.cpp  RTCAN_Motor_Client.cpp  iddp_rt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui.autosave  pipe_nrt.cpp  pipe_rt.cpp  xddp_nrt.cpp  xddp_rt.cpp
